src/app/components/containers/sidebar-container/sidebar-container.component.css
/* Resizing Sidebar Container using Flexbox */
:host {
    flex: 1 1 473px;

    /* This rule prevents container from unnecessary expansion */
    box-sizing: border-box;

    background-color: var(--outer-black-main);
    padding: 35px 60px 72px 60px;
}

/* Making Both Containers Flex Containers */
.container, .buttonContainer {
    display: flex;
}

/* Styling Component Container */
.container {
    flex-direction: column;
    justify-content: space-between;

    width: 100%;
    height: 100%;
}

/* Styling Sidebar Button Container */
.buttonContainer {
    flex-direction: row;
    justify-content: space-between;

    margin-top: 100px;
}

